// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createHttpSocketEmitter should return an object with emit method 1`] = `
[
  "emit",
]
`;

exports[`createSocketEmitter should return an object with emit and broadcast methods 1`] = `
[
  "broadcast",
  "emit",
]
`;
